--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Get the longest common substring
 Version: 0.1.0
 Author: Xiaoguang Pan
 Maintainer: The package maintainer <xiaoguang.pan@bio.ku.dk>
-Description: Get the longest common substring
+Description: Get the longest common substring.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
